porting testutils to JPMS + JUnit 5